--- a/popup.css
+++ b/popup.css
@@ -1,36 +1,97 @@
-body{
-    background: #f1f5f9;
-}
-
-.wrapper{
-    width:300px;
-    text-align:center;
-}
-
-.changeColorBtn{
-    width:200px;
-    outline:none;
-    border:none;
-    border-radius:2px;
-    padding:5px;
-    background: #facc15;
-    cursor:pointer;
-}
-
-.colorGrid{
-    display:inline-block;
-    width:20px;
-    height:20px;
-    border-radius:2px;
-}
-
-.selectedColor{
-    display:flex;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+  body {
+    width:500px;
+    height:700px;
+    background-color: #377dff;
+  }
+  .hide {
+    display: none;
+  }
+  .wrapper {
+    background-color: #ffffff;
+    width: 90%;
+    max-width: 31.25em;
+    padding: 3.12em 5em;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 1em;
+    border-radius: 0.5em;
+  }
+  .timer-display {
+    font-size: 2.18em;
+    text-align: center;
+    font-family: "Roboto Mono", monospace;
+  }
+  .inputs {
+    display: flex;
     align-items: center;
-    margin-top:20px;
-}
-
-.colorValue{
-    margin-left:5px;
-    font-weight:700;
-}
+    justify-content: center;
+    gap: 1em;
+    margin-top: 2em;
+  }
+  .inputs input {
+    width: 2.8em;
+    font-size: 1.3em;
+    border: 1px solid #000000;
+    border-radius: 0.3em;
+    padding: 0.4em 0.2em;
+  }
+  #set {
+    background-color: #377dff;
+    border: none;
+    padding: 0.9em 1.8em;
+    display: block;
+    margin: 1.5em auto 0 auto;
+    border-radius: 2em;
+    color: #ffffff;
+  }
+  .alarm {
+    display: grid;
+    grid-template-columns: 8fr 2fr 2fr;
+    gap: 1em;
+    margin-top: 1.5em;
+    align-items: center;
+    border-bottom: 1px solid #898f9b;
+    padding-bottom: 0.6em;
+  }
+  .alarm input[type="checkbox"] {
+    appearance: none;
+    height: 2em;
+    width: 3.75em;
+    background-color: #e2e2ec;
+    border-radius: 1.25em;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+  }
+  .alarm input[type="checkbox"]:before {
+    position: absolute;
+    content: "";
+    background-color: #757683;
+    height: 1.43em;
+    width: 1.43em;
+    border-radius: 50%;
+    top: 0.25em;
+    left: 0.25em;
+  }
+  .alarm input[type="checkbox"]:checked {
+    background-color: #d2e2ff;
+  }
+  .alarm input[type="checkbox"]:checked:before {
+    background-color: #377dff;
+    left: 2em;
+  }
+  .deleteButton {
+    background-color: transparent;
+    font-size: 1.5em;
+    color: #377dff;
+    border: none;
+    cursor: pointer;
+  }
+  
